# doc-generator-gui

./: .gitignore  README.md  build.py  build_nuitka.py  build_pyinstaller.py  empresa.xml  layouts.json  pyproject.toml  requirements-dev.txt  requirements.txt
Templates/: footer.html  header.html  termo_cartucho.html  termo_cartucho_devol.html  termo_celular.html  termo_celular_devol.html  termo_ibutton.html  termo_ibutton_devol.html  termo_impressora.html  termo_impressora_devol.html  termo_inversor.html  termo_inversor_devol.html  termo_notebook.html  termo_notebook_devol.html
Termos/: readme.txt
assets/icons/: gen_document.icns
data/: company.json  layouts.json
data/Templates/: footer.html  header.html  termo_cartucho.html  termo_cartucho_devol.html  termo_ibutton.html  termo_impressora_devol.html  termo_inversor.html
data/layouts/: layouts.json  layouts_devol.json
data/templates/: base.html  footer.html  header.html  style.css  termo_cartucho.html  termo_cartucho_devol.html  termo_celular.html  termo_celular_devol.html  termo_ibutton.html  termo_ibutton_devol.html  termo_impressora.html  termo_impressora_devol.html  termo_inversor.html  termo_inversor_devol.html  termo_notebook.html  termo_notebook_devol.html
documents/: readme.txt
src/: main.py
src/doc_generator_gui/: app.py  bootstrap.py  build.py  constants.py  cpf_input.py  entrypoint.py  gen_document.py  main.py  msgboxutils.py
src/doc_generator_gui/Stores/: layout_store.py
src/doc_generator_gui/contexts/: document_context.py  print_context.py
src/doc_generator_gui/controllers/: document_controller.py  layout_controller.py
src/doc_generator_gui/core/: di_container.py  providers.py
src/doc_generator_gui/factories/: dialog_factory.py  printer_factory.py
src/doc_generator_gui/handlers/: html_template_handler.py
src/doc_generator_gui/helpers/: dialog_helpers.py
src/doc_generator_gui/loaders/: company_data_loader.py
src/doc_generator_gui/readers/: json_reader.py
src/doc_generator_gui/repositories/: layout_repository.py
src/doc_generator_gui/schemas/: components.py  layouts.py
src/doc_generator_gui/services/: html_template_service.py  json_reader_service.py  pdf_service.py  printer_service.py  readers.py  template_engine_service.py
tests/: __init__.py  test_cpf_cnpj.py  test_output_path.py
(+19 files in other folders)
