[tool.poetry]
name = "doc-generator-gui"
version = "0.1.0"
description = "Gerador de termos para empresas."
authors = ["Endryl Richard Monteiro <endrylrm@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PySide6 = "^6.9.1"

[tool.poetry.group.dev.dependencies]
Nuitka = "^2.7.11"
pyinstaller = "^6.14.1"
pytest = "^8.4.1"

[tool.poetry.scripts]
build-nuitka = "build:Build_Nuitka"
build-pyinstaller = "build:Build_PyInstaller"
main = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
