[tool.poetry]
name = "doc-generator-gui"
version = "0.1.0"
description = "Gerador de termos para empresas."
authors = ["Endryl Richard Monteiro <endrylrm@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
PySide6 = "^6.11.1"

[tool.poetry.group.dev.dependencies]
Nuitka = "^4.1"
pyinstaller = "^6.20.0"
pytest = "^9.0.3"
pytest-qt = "^4.5.0"

[tool.poetry.scripts]
build-nuitka = "build:build_nuitka"
build-pyinstaller = "build:build_pyinstaller"
main = "src.doc_generator_gui.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
