[project]
name = "doc-generator-gui"
version = "0.1.0"
description = "Gerador de termos para empresas."
authors = [{ name = "Endryl Richard Monteiro", email = "endrylrm@hotmail.com" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["PySide6>=6.11.1,<7"]

[project.scripts]
build-nuitka = "build:build_nuitka"
build-pyinstaller = "build:build_pyinstaller"
main = "doc_generator_gui.main:main"

[dependency-groups]
dev = [
    "Nuitka>=4.1.1,<5",
    "pyinstaller>=6.20.0,<7",
    "pytest>=9.0.3,<10",
    "pytest-qt>=4.5.0,<5",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
